# lambda-AMXX-Module

./: CMakeLists.txt  LICENSE  README.md
addons/amxmodx/scripting/include/: lambda.inc
src/: CMakeLists.txt  lambda.cpp  lambda.h  native.cpp
src/sdk/: amxxmodule.cpp  amxxmodule.h  moduleconfig.h
